--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
     "Domains": ["dev.sfproductlabs.com"],
-    "ProxyUrl": "localhost:8000",
+    "ProxyUrl": "http://localhost:8000",
     "StaticDirectory" : "public",
     "UsePingPong" : true,
     "Tracker" : "/tracker"
