--- a/dragongate.supervisor.conf
+++ b/dragongate.supervisor.conf
@@ -1,4 +1,4 @@
 [program:dragongate]
-directory=/app/dragongate
-command=sudo -E -u root /usr/bin/nice -n 5 /app/go/src/github.com/dioptre/dragongate/dragongate
+directory=/root/dragongate
+command=sudo -E -u root /usr/bin/nice -n 5 ./dragongate
 redirect_stderr=true
