set default back to LetsEncrypt

--- a/config.json
+++ b/config.json
@@ -4,5 +4,5 @@
     "StaticDirectory" : "public",
     "UsePingPong" : true,
     "Tracker" : "/tracker",
-    "UseLocalTLS" : true
+    "UseLocalTLS" : false
 }
