--- a/config.json
+++ b/config.json
@@ -7,6 +7,8 @@
     "StaticDirectory": "public",
     "ProxyUrl": "http://localhost:3030",
     "UseLocalTLS": true,
+    "ProxyPortTLS" : ":8443",
+    "ProxyPort" : ":8080",
     "Notify": [
         {
             "Service": "cassandra",
@@ -18,7 +20,8 @@
             "Cert": "cstarcert.pem",
             "Key": "cstarkey.pem",
             "Secure": false,
-            "Retry": false
+            "Retry": false,
+            "Critical" :true
         },
         {
             "Service": "nats",
@@ -44,6 +47,7 @@
                 "tls://localhost:4222"
             ],
             "Secure": true,
+            "Critical" : true,
             "CACert": "natscacert.pem",
             "Cert": "natscert.pem",
             "Key": "natskey.pem",
