--- a/config.json
+++ b/config.json
@@ -21,47 +21,13 @@
             "Key": "cstarkey.pem",
             "Secure": false,
             "Retry": false,
-            "Critical" :true
-        },
-        {
-            "Service": "nats",
-            "Hosts": [
-                "tls://localhost:4222"
-            ],
-            "Context": "tic.track.*",
-            "Secure": true,
-            "CACert": "natscacert.pem",
-            "Cert": "natscert.pem",
-            "Key": "natskey.pem",
-            "Format": "json"
-        }
-    ],
-    "Consume": [
-        {
-            "Service": "http",
-            "Note": "Not implemented"
-        },
-        {
-            "Service": "nats",
-            "Hosts": [
-                "tls://localhost:4222"
-            ],
-            "Secure": true,
-            "Critical" : true,
-            "CACert": "natscacert.pem",
-            "Cert": "natscert.pem",
-            "Key": "natskey.pem",
-            "Format": "json",
-            "MessageLimit": 65536,
-            "BytesLimit": 67108864,
+            "Critical" :true,
             "Filter": [
                 {
                     "Alias": "log",
-                    "Type": "chan",
-                    "Id": "tic.log.>",
+                    "Id": "log",
                     "Queries": [
                         {
-                            "Service": "cassandra",
                             "Statement": "INSERT INTO logs JSON ?",
                             "QueryType": "json",
                             "Fields": [
@@ -103,11 +69,9 @@
                 },
                 {
                     "Alias": "count",
-                    "Type": "chan",
-                    "Id": "tic.count.>",
+                    "Id": "count",
                     "Queries": [
                         {
-                            "Service": "cassandra",
                             "Statement": "UPDATE counters set total=total+1 where id=? AND type=?",
                             "Fields": [
                                 {
@@ -124,11 +88,9 @@
                 },
                 {
                     "Alias": "update",
-                    "Type": "chan",
-                    "Id": "tic.update.>",
+                    "Id": "update",
                     "Queries": [
                         {
-                            "Service": "cassandra",
                             "Statement" : "INSERT INTO updates (id, updated, msg) values (?,?,?)",
                             "Fields": [
                                 {
@@ -147,6 +109,55 @@
                             ]
                         }
                     ]
+                }
+            ]
+        },
+        {
+            "Service": "nats",
+            "Hosts": [
+                "tls://localhost:4222"
+            ],
+            "Context": "tic.track.*",
+            "Secure": true,
+            "CACert": "natscacert.pem",
+            "Cert": "natscert.pem",
+            "Key": "natskey.pem",
+            "Format": "json"
+        }
+    ],
+    "Consume": [
+        {
+            "Service": "http",
+            "Note": "Not implemented"
+        },
+        {
+            "Service": "nats",
+            "Hosts": [
+                "tls://localhost:4222"
+            ],
+            "Secure": true,
+            "Critical" : true,
+            "CACert": "natscacert.pem",
+            "Cert": "natscert.pem",
+            "Key": "natskey.pem",
+            "Format": "json",
+            "MessageLimit": 65536,
+            "BytesLimit": 67108864,
+            "Filter": [
+                {
+                    "Alias": "log",
+                    "Type": "chan",
+                    "Id": "tic.log.>"
+                },
+                {
+                    "Alias": "count",
+                    "Type": "chan",
+                    "Id": "tic.count.>"
+                },
+                {
+                    "Alias": "update",
+                    "Type": "chan",
+                    "Id": "tic.update.>"
                 }
             ]
         }
