--- a/config.json
+++ b/config.json
@@ -9,6 +9,7 @@
     "UseLocalTLS": true,
     "ProxyPortTLS" : ":8443",
     "ProxyPort" : ":8080",
+    "Debug" : true,
     "Notify": [
         {
             "Service": "cassandra",
