--- a/config.json
+++ b/config.json
@@ -12,9 +12,10 @@
     "ProxyPortTLS" : ":8443",
     "ProxyPort" : ":8080",
     "ProxyDailyLimit" : 0,
+    "ProxyDailyLimitChecker" : "cassandra",
     "IgnoreProxyOptions" : false,
     "ProxyUrlFilter" : ".*/login.*",
-    "ProxyDailyLimitChecker" : "cassandra",
+    "ProxyForceJson" : true,
     "MaximumConnections": 150000,
     "ReadTimeoutSeconds" : 20,
     "ReadHeaderTimeoutSeconds" : 20,
