--- a/tracker.supervisor.conf
+++ b/tracker.supervisor.conf
@@ -1,4 +1,4 @@
 [program:tracker]
-directory=/root/tracker
+directory=/app/tracker
 command=sudo -E -u root /usr/bin/nice -n 5 ./tracker
 redirect_stderr=true
