--- a/config.json
+++ b/config.json
@@ -7,8 +7,8 @@
     "StaticDirectory": "public",
     "ProxyUrl": "http://localhost:3030",
     "UseLocalTLS": true,
-    "TLSCert" : "./server.crt",
-    "TLSKey" : "./server.key",
+    "TLSCert" : "./.setup/keys/example/server.crt",
+    "TLSKey" : "./.setup/keys/example/server.key",
     "ProxyPortTLS" : ":8443",
     "ProxyPort" : ":8080",
     "ProxyDailyLimit" : 0,
@@ -38,9 +38,9 @@
             ],
             "Context": "sfpla",
             "Timeout" : 300,
-            "CACert": "cstarcacert.pem",
-            "Cert": "cstarcert.pem",
-            "Key": "cstarkey.pem",
+            "CACert": "./.setup/keys/example/cstarcacert.pem",
+            "Cert": "./.setup/keys/example/cstarcert.pem",
+            "Key": "./.setup/keys/example/cstarkey.pem",
             "Secure": false,
             "Retry": false,
             "Critical" :true,
@@ -141,9 +141,9 @@
             ],
             "Context": "toc.track.notify",
             "Secure": true,
-            "CACert": "natscacert.pem",
-            "Cert": "natscert.pem",
-            "Key": "natskey.pem",
+            "CACert": "./.setup/keys/example/natscacert.pem",
+            "Cert": "./.setup/keys/example/natscert.pem",
+            "Key": "./.setup/keys/example/natskey.pem",
             "Format": "json"
         }
     ],
@@ -159,9 +159,9 @@
             ],
             "Secure": true,
             "Critical" : true,
-            "CACert": "natscacert.pem",
-            "Cert": "natscert.pem",
-            "Key": "natskey.pem",
+            "CACert": "./.setup/keys/example/natscacert.pem",
+            "Cert": "./.setup/keys/example/natscert.pem",
+            "Key": "./.setup/keys/example/natskey.pem",
             "Format": "json",
             "MessageLimit": 65536,
             "ByteLimit": 67108864,
