--- a/config.json
+++ b/config.json
@@ -29,7 +29,7 @@
     "UrlFilter" : "http(s|)://(api|tr|dev|spark|)(\\.|)(sfproductlabs\\.com|localhost)(:[0-9]*|)(/[^\\?#]*)(\\?|#|)",
     "UrlFilterMatchGroup" : 6,
     "IgnoreQueryParamsKey" : "igqp",
-    "AccountHashMixer" : "s0MpGNhqoc96NND5pYwH",
+    "AccountHashMixer" : "",
     "Notify": [
         {
             "Service": "cassandra",
