updated keys for more accurate demo

--- a/config.json
+++ b/config.json
@@ -39,9 +39,9 @@
             ],
             "Context": "sfpla",
             "Timeout" : 300,
-            "CACert": "./.setup/keys/example/cstarcacert.pem",
-            "Cert": "./.setup/keys/example/cstarcert.pem",
-            "Key": "./.setup/keys/example/cstarkey.pem",
+            "CACert": "./.setup/keys/staging/rootCa.crt",
+            "Cert": "./.setup/keys/staging/cassandra-client.crt",
+            "Key": "./.setup/keys/staging/cassandra-client.key",
             "Secure": false,
             "Retry": false,
             "Critical" :true,
@@ -142,9 +142,9 @@
             ],
             "Context": "toc.track.notify",
             "Secure": true,
-            "CACert": "./.setup/keys/example/natscacert.pem",
-            "Cert": "./.setup/keys/example/natscert.pem",
-            "Key": "./.setup/keys/example/natskey.pem",
+            "CACert": "./.setup/keys/staging/rootCa.crt",
+            "Cert": "./.setup/keys/staging/nats-client.crt",
+            "Key": "./.setup/keys/staging/nats-client.key",
             "Format": "json"
         }
     ],
@@ -160,9 +160,9 @@
             ],
             "Secure": true,
             "Critical" : true,
-            "CACert": "./.setup/keys/example/natscacert.pem",
-            "Cert": "./.setup/keys/example/natscert.pem",
-            "Key": "./.setup/keys/example/natskey.pem",
+            "CACert": "./.setup/keys/staging/rootCa.crt",
+            "Cert": "./.setup/keys/staging/nats-client.crt",
+            "Key": "./.setup/keys/staging/nats-client.key",
             "Format": "json",
             "MessageLimit": 65536,
             "ByteLimit": 67108864,
