--- a/config.json
+++ b/config.json
@@ -2,7 +2,10 @@
     "Domains": [
         "localhost",
         "dev.sfpl.io",
-        "tr.sfpl.io"
+        "tr.sfpl.io",
+        "api.sfpl.io",
+        "msgxc.sfpl.io",
+        "tr.valid9.com"
     ],
     "SchemaVersion": 2,
     "ApiVersion": 1,
@@ -29,7 +32,7 @@
     "AllowOrigin": "*",
     "DefaultRedirect": "https://sfpl.io",
     "Debug" : true,
-    "UrlFilter" : "http(s|)://(api|tr|dev|spark|)(\\.staging\\.|\\.|)(sfpl\\.io|localhost)(:[0-9]*|)(/[^\\?#]*)(\\?|#|)",
+    "UrlFilter" : "http(s|)://(api|tr|dev|spark|superset|jupyter|msgxc)(\\.staging\\.|\\.|)(valid9\\.com|sfpl\\.io|localhost)(:[0-9]*|)(/[^\\?#]*)(\\?|#|)",
     "UrlFilterMatchGroup" : 6,
     "IgnoreQueryParamsKey" : "igqp",
     "AccountHashMixer" : "",
@@ -42,9 +45,9 @@
             ],
             "Context": "sfpla",
             "Timeout" : 300,
-            "CACert": "./.setup/keys/staging/rootCa.crt",
-            "Cert": "./.setup/keys/staging/cassandra-client.crt",
-            "Key": "./.setup/keys/staging/cassandra-client.key",
+            "CACert": "./.setup/keys/rootCa.crt",
+            "Cert": "./.setup/keys/cassandra-client.crt",
+            "Key": "./.setup/keys/cassandra-client.key",
             "Secure": false,
             "Retry": false,
             "Critical" :true,
@@ -145,9 +148,9 @@
             ],
             "Context": "toc.track.notify",
             "Secure": true,
-            "CACert": "./.setup/keys/staging/rootCa.crt",
-            "Cert": "./.setup/keys/staging/nats-client.crt",
-            "Key": "./.setup/keys/staging/nats-client.key",
+            "CACert": "./.setup/keys/rootCa.crt",
+            "Cert": "./.setup/keys/nats-client.crt",
+            "Key": "./.setup/keys/nats-client.key",
             "Format": "json"
         }
     ],
@@ -163,9 +166,9 @@
             ],
             "Secure": true,
             "Critical" : true,
-            "CACert": "./.setup/keys/staging/rootCa.crt",
-            "Cert": "./.setup/keys/staging/nats-client.crt",
-            "Key": "./.setup/keys/staging/nats-client.key",
+            "CACert": "./.setup/keys/rootCa.crt",
+            "Cert": "./.setup/keys/nats-client.crt",
+            "Key": "./.setup/keys/nats-client.key",
             "Format": "json",
             "MessageLimit": 65536,
             "ByteLimit": 67108864,
