--- a/config.json
+++ b/config.json
@@ -12,9 +12,9 @@
     "StaticDirectory": "public",
     "ProxyUrl": "http://localhost:3030",
     "UseLocalTLS": true,
-    "TLSCert" : "./.setup/keys/example/server.crt",
-    "TLSKey" : "./.setup/keys/example/server.key",
-    "ProxyPortTLS" : ":443",
+    "TLSCert" : "./.setup/keys/nginx.crt",
+    "TLSKey" : "./.setup/keys/nginx.key",
+    "ProxyPortTLS" : ":8443",
     "ProxyPortRedirect" : "",
     "ProxyPort" : ":8080",
     "ProxyDailyLimit" : 0,
