--- a/config.json
+++ b/config.json
@@ -5,7 +5,8 @@
         "tr.sfpl.io",
         "api.sfpl.io",
         "msgxc.sfpl.io",
-        "tr.valid9.com"
+        "tr.valid9.com",
+        "valid9.tr.sfpl.io"
     ],
     "SchemaVersion": 2,
     "ApiVersion": 1,
