--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
      command: >
               bash -c "((sleep 60s && cqlsh --ssl < /tmp/.csetup/schema.2.cql &) && (/docker-entrypoint.sh cassandra -f))"
   nats:
-    image: docker.pkg.github.com/dioptre/nats/nats:latest
+    image: sfproductlabs/nats:latest
     ports:
       - "4222:4222"
       - "6222:6222"
