--- a/config.json
+++ b/config.json
@@ -8,8 +8,9 @@
         "tr.valid9.com",
         "valid9.tr.sfpl.io"
     ],
-    "SchemaVersion": 2,
+    "SchemaVersion": 3,
     "ApiVersion": 1,
+    "UseGeoIP": true,
     "StaticDirectory": "public",
     "ProxyUrl": "http://localhost:3030",
     "UseLocalTLS": true,
