--- a/config.json
+++ b/config.json
@@ -10,6 +10,7 @@
     ],
     "SchemaVersion": 3,
     "ApiVersion": 1,
+    "TempDirectory": "./tmp/",
     "UseGeoIP": true,
     "GeoIPVersion": 1,
     "IPv4GeoIPZip": "./.setup/geoip/IP2LOCATION-LITE-DB11.CSV.ZIP",
