--- a/config.json
+++ b/config.json
@@ -8,8 +8,15 @@
         "tr.valid9.com",
         "valid9.tr.sfpl.io"
     ],
-    "SchemaVersion": 2,
+    "SchemaVersion": 3,
     "ApiVersion": 1,
+    "TempDirectory": "./tmp/",
+    "UseGeoIP": true,
+    "GeoIPVersion": 1,
+    "IPv4GeoIPZip": "./.setup/geoip/IP2LOCATION-LITE-DB11.CSV.ZIP",
+    "IPv6GeoIPZip": "./.setup/geoip/IP2LOCATION-LITE-DB11.IPV6.CSV.ZIP",
+    "IPv4GeoIPCSVDest": "IP2LOCATION-LITE-DB11.CSV",
+    "IPv6GeoIPCSVDest": "IP2LOCATION-LITE-DB11.IPV6.CSV",
     "StaticDirectory": "public",
     "ProxyUrl": "http://localhost:3030",
     "UseLocalTLS": true,
