--- a/config.json
+++ b/config.json
@@ -6,7 +6,8 @@
         "api.sfpl.io",
         "msgxc.sfpl.io",
         "tr.valid9.com",
-        "valid9.tr.sfpl.io"
+        "valid9.tr.sfpl.io",
+        "chat.sfpl.io"
     ],
     "SchemaVersion": 3,
     "ApiVersion": 1,
