--- a/config.json
+++ b/config.json
@@ -13,6 +13,7 @@
     "ApiVersion": 1,
     "TempDirectory": "./tmp/",
     "UseGeoIP": true,
+    "UseRegionDescriptions": true,
     "GeoIPVersion": 1,
     "IPv4GeoIPZip": "./.setup/geoip/IP2LOCATION-LITE-DB11.CSV.ZIP",
     "IPv6GeoIPZip": "./.setup/geoip/IP2LOCATION-LITE-DB11.IPV6.CSV.ZIP",
