--- a/config.json
+++ b/config.json
@@ -47,7 +47,7 @@
     "UrlFilter" : "http(s|)://(api|tr|dev|spark|superset|jupyter|msgxc)(\\.staging\\.|\\.|)(valid9\\.com|sfpl\\.io|localhost)(:[0-9]*|)(/[^\\?#]*)(\\?|#|)",
     "UrlFilterMatchGroup" : 6,
     "IgnoreQueryParamsKey" : "igqp",
-    "AccountHashMixer" : "",
+    "AccountHashMixer" : "",    
     "Notify": [
         {
             "Service": "cassandra",
@@ -63,6 +63,25 @@
             "Secure": false,
             "Retries": 3,
             "Critical" :true,
+            "Prune": [
+                {
+                    "Table": "events",
+                    "TTL": 1,
+                    "PageSize": 10000,
+                    "IgnoreCFlags": [],
+                    "SkipToTimestamp": 0,
+                    "ClearAll": false,
+                    "ClearParams" : true,
+                    "ClearNumericParams": true,
+                    "Fields": [
+                        {
+                            "Id": "ip",
+                            "Type": "inet",
+                            "DestParamHash": "iphash"                    
+                        }
+                    ]
+                }
+            ],
             "Filter": [
                 {
                     "Alias": "log",
